name:                corr
version:             0.0.7
synopsis:            Correlate JetBrains Youtrack issues and git branches.
license:             GPL-3
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
copyright:           Copyright (c) 2016-2017 Kosyrev Serge
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable corr
  main-is:             corr.hs
  default-language:    Haskell2010

  ghc-options:         -threaded -Wall

  build-depends:       aeson >= 0.9
                     , base >=4.8
                     , base-unicode-symbols >=0.2
                     , brick >= 0.17
                     , bytestring >=0.10
                     , cassava >= 0.4
                     , containers >= 0.5
                     , data-default >= 0.5
                     , exceptions >= 0.8
                     , gitlib >= 3.1
                     , gitlib-libgit2 >= 3.1
                     -- , gitlib-cmdline >= 3.1
                     , hashable >= 1.2
                     , foldl >= 1.1
                     , free-vl >= 0.1
                     , lens >=4.13
                     , monad-control >= 1.0
                     , mtl >=2.2
                     , optparse-applicative >= 0.12
                     , QuickCheck >= 2.8
                     , scientific >=0.3
                     -- , singletons >= 2.0
                     , split >= 0.2
                     , tagged >=0.8
                     , text >=1.2
                     , time >=1.5
                     , turtle >= 1.2
                     , unordered-containers >=0.2
                     , utf8-string >=1.0
                     , vector >=0.11
                     , vty >= 5.0
                     , youtrack >= 0.0.8
                     , wreq >= 0.4
